// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset Component Styling matches default 1`] = `
.c0 {
  border: 0;
  padding: 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-1x);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<ForwardRef>
  <styled.fieldset
    aria-orientation="vertical"
    data-testid="fieldset"
    id="uuid1"
    orientation="vertical"
  >
    <fieldset
      aria-orientation="vertical"
      className="c0"
      data-testid="fieldset"
      id="uuid1"
      orientation="vertical"
    >
      Test Content
    </fieldset>
  </styled.fieldset>
</ForwardRef>
`;

exports[`Fieldset Component Styling matches horizontal orientation 1`] = `
.c0 {
  border: 0;
  padding: 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-1x);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<ForwardRef
  orientation="horizontal"
>
  <styled.fieldset
    aria-orientation="horizontal"
    data-testid="fieldset"
    id="uuid1"
    orientation="horizontal"
  >
    <fieldset
      aria-orientation="horizontal"
      className="c0"
      data-testid="fieldset"
      id="uuid1"
      orientation="horizontal"
    >
      Test Content
    </fieldset>
  </styled.fieldset>
</ForwardRef>
`;

exports[`Fieldset Component Styling matches vertical orientation 1`] = `
.c0 {
  border: 0;
  padding: 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-1x);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<ForwardRef
  orientation="vertical"
>
  <styled.fieldset
    aria-orientation="vertical"
    data-testid="fieldset"
    id="uuid1"
    orientation="vertical"
  >
    <fieldset
      aria-orientation="vertical"
      className="c0"
      data-testid="fieldset"
      id="uuid1"
      orientation="vertical"
    >
      Test Content
    </fieldset>
  </styled.fieldset>
</ForwardRef>
`;

exports[`Fieldset Component Styling matches with legend 1`] = `
.c1 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

.c0 {
  border: 0;
  padding: 0;
  margin: 0;
  min-width: 0;
  min-inline-size: 0;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-1x);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<ForwardRef
  legend={
    {
      "bold": true,
      "children": "Text Legend",
    }
  }
>
  <styled.fieldset
    aria-orientation="vertical"
    data-testid="fieldset"
    id="uuid1"
    orientation="vertical"
  >
    <fieldset
      aria-orientation="vertical"
      className="c0"
      data-testid="fieldset"
      id="uuid1"
      orientation="vertical"
    >
      <Legend
        bold={true}
        id="uuid1-legend"
      >
        <styled.legend
          bold={true}
          datatest-id="legend"
          id="uuid1-legend"
          isMobile={false}
        >
          <legend
            className="c1"
            id="uuid1-legend"
          >
            Text Legend
          </legend>
        </styled.legend>
      </Legend>
      Test Content
    </fieldset>
  </styled.fieldset>
</ForwardRef>
`;
